--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Whats Cookin</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body>
     <h1>Whats Cookin</h1>
-
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
