Add navigation bar

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,18 @@
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body>
-    <h1>Whats Cookin</h1>
+    <header>
+    <h1 class="whats-cookin">What's Cookin in User's Kitchen?</h1>
+    <nav>
+      <ul>
+        <li><a href="" class="current">All Recipes</a></li>
+        <li><a href="">Favorite Recipes</a></li>
+        <li><a href="">Recipes to Cook</a></li>
+        <li><a href="">My Pantry</a></li>
+        <li><a href="">Shopping List</a></li>
+      </ul>
+    </nav>
+  </header>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
