--- a/src/index.html
+++ b/src/index.html
@@ -92,10 +92,13 @@
             and so on...</p>
         </section>
       </aside>
-          <script type="text/javascript" src="../data/users.js"></script>
-          <script type="text/javascript" src="../data/recipes.js"></script>
-          <script type="text/javascript" src="../data/ingredients.js"></script>
-          <script type="text/javascript" src="./scripts.js"></script>
-        </div>
-      </body>
-      </html>
+      <footer>
+    A Project From Turing School of Software & Design
+      </footer>
+    </div><!-- .wrapper -->
+      <script type="text/javascript" src="../data/users.js"></script>
+      <script type="text/javascript" src="../data/recipes.js"></script>
+      <script type="text/javascript" src="../data/ingredients.js"></script>
+      <script type="text/javascript" src="./scripts.js"></script>
+    </body>
+  </html>
