Add getRandomUser onLoad function

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1 class="whats-cookin">What's Cookin in User's Kitchen?</h1>
+      <h1 class="whats-cookin-message">What's Cookin in User's Kitchen?</h1>
       <nav>
         <ul>
           <li><a href="" class="current">All Recipes</a></li>
@@ -19,7 +19,7 @@
         </ul>
       </nav>
     </header>
-    <section class="recipes">
+    <section class="recipe-data">
       <article>
         <figure>
           <img class="recipe-image" src="https://spoonacular.com/recipeImages/595736-556x370.jpg",
@@ -96,7 +96,10 @@
     </div><!-- .wrapper -->
       <script type="text/javascript" src="../data/users.js"></script>
       <script type="text/javascript" src="../data/recipes.js"></script>
-      <script type="text/javascript" src="../data/ingredients.js"></script>
+      <!-- <script type="text/javascript" src="../data/ingredients.js"></script> -->
       <script type="text/javascript" src="./scripts.js"></script>
+      <script type="text/javascript" src="./Recipe.js"></script>
+      <script type="text/javascript" src="./User.js"></script>
+      <script type="text/javascript" src="./Pantry.js"></script>
     </body>
   </html>
