Add class to h1 whats-cookin-message; section recipes-display

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
         </ul>
       </nav>
     </header>
-    <section class="recipe-data">
-      <article>
+    <section class="recipes-display">
+      <!-- <article class="recipe-block" id="">
         <figure>
           <img class="recipe-image" src="https://spoonacular.com/recipeImages/595736-556x370.jpg",
           "ingredients" alt="Loaded Chocolate Chip Pudding Cookie Cups" />
@@ -47,9 +47,9 @@
                 <h3>Ingredients</h3>
               </div>
             </div>
-          </p>
-        </article>
-        <article>
+          </p> -->
+        <!-- </article> -->
+        <!-- <article>
           <figure>
             <img class="recipe-image"
             src="https://spoonacular.com/recipeImages/678353-556x370.jpg" alt="Maple Dijon Apple Cider Grilled Pork Chops" />
@@ -72,7 +72,7 @@
               </div>
             </div>
           </p>
-        </article>
+        </article> -->
       </section>
       <aside>
         <section class="shopping-list">
@@ -96,7 +96,7 @@
     </div><!-- .wrapper -->
       <script type="text/javascript" src="../data/users.js"></script>
       <script type="text/javascript" src="../data/recipes.js"></script>
-      <!-- <script type="text/javascript" src="../data/ingredients.js"></script> -->
+      <script type="text/javascript" src="../data/ingredients.js"></script>
       <script type="text/javascript" src="./scripts.js"></script>
       <script type="text/javascript" src="./Recipe.js"></script>
       <script type="text/javascript" src="./User.js"></script>
