Replace missing modal elements extracted from JS display function - now lives in html

--- a/src/index.html
+++ b/src/index.html
@@ -20,59 +20,15 @@
       </nav>
     </header>
     <section class="recipes-display">
-      <!-- <article class="recipe-block" id="">
-        <figure>
-          <img class="recipe-image" src="https://spoonacular.com/recipeImages/595736-556x370.jpg",
-          "ingredients" alt="Loaded Chocolate Chip Pudding Cookie Cups" />
-        </figure>
-        <hgroup>
-          <h2>Loaded Chocolate Chip Pudding Cookie Cups</h2>
-          <h3>tag tag tag</h3>
-        </hgroup>
-        <p>
-          <button>Like</button>
-          <button>Remove</button>
-        </p>
-        <p>
-          <button class="trigger">Click here to see more</button>
-          <div class="modal">
+          <div class="modal" id="modal">
             <div class="modal-content">
-              <span class="close-button">x</span>
-              <h1>Instructions</h1>
-              <p> 1. In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy.<br>
-                2. Add egg and vanilla and mix until combined.<br>
-                3. Add dry ingredients and mix on low just until incorporated. Stir in chocolate chips.Scoop the dough into 1,5 tablespoon size balls and place on a plate or sheet. Cover with saran wrap and chill at least 2 hours or overnight.When ready to bake, preheat oven to 350 degrees.<br>
-                4. Place the cookie dough balls into ungreased muffin pan. Sprinkle with sea salt.<br>
-                5. Bake for 9 to 10 minutes, or until you see the edges start to brown.</p>
+              <span class="close-button" id="close-button">x</span>
+              <h3>Instructions</h3>
+              <p class="instructions"></p>
                 <h3>Ingredients</h3>
+              <p class="ingredients"></p>
               </div>
             </div>
-          </p> -->
-        <!-- </article> -->
-        <!-- <article>
-          <figure>
-            <img class="recipe-image"
-            src="https://spoonacular.com/recipeImages/678353-556x370.jpg" alt="Maple Dijon Apple Cider Grilled Pork Chops" />
-          </figure>
-          <hgroup>
-            <h2>Maple Dijon Apple Cider Grilled Pork Chops</h2>
-            <h3>tag tag tag tag</h3>
-          </hgroup>
-          <p>
-            <button>Like</button>
-            <button>Remove</button>
-          </p>
-          <p>
-            <button class="trigger">Click here to see more</button>
-            <div class="modal">
-              <div class="modal-content">
-                <span class="close-button">x</span>
-                <h1>Instructions</h1>
-                <h3>Ingredients</h3>
-              </div>
-            </div>
-          </p>
-        </article> -->
       </section>
       <aside>
         <section class="shopping-list">
