Add functionality for displaying cost of recipe

--- a/src/index.html
+++ b/src/index.html
@@ -20,15 +20,17 @@
       </nav>
     </header>
     <section class="recipes-display">
-          <div class="modal" id="modal">
-            <div class="modal-content">
-              <span class="close-button" id="close-button">x</span>
-              <h3>Instructions</h3>
+      <div class="modal" id="modal">
+        <div class="modal-content">
+            <span class="close-button" id="close-button">x</span>
+            <h3>Instructions</h3>
               <p class="instructions"></p>
-                <h3>Ingredients</h3>
+            <h3>Ingredients</h3>
               <p class="ingredients"></p>
-              </div>
-            </div>
+            <h3>Estimated Cost In Cents</h3>
+              <p class="estimated-cost"></p>
+          </div>
+        </div>
       </section>
       <aside>
         <section class="shopping-list">
