Fix unclosed div in favorite recipes

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="" class="tab-all-recipes current">All Recipes</a></li>
           <li><a href="" class="tab-favorite-recipes">Favorite Recipes</a></li>
-          <li><a href="">Recipes to Cook</a></li>
+          <li><a href="" class="tab-to-cook-recipes">Recipes to Cook</a></li>
           <li><a href="">My Pantry</a></li>
           <li><a href="">Shopping List</a></li>
         </ul>
@@ -23,7 +23,7 @@
       <div class="all-recipes">
       </div>
       <div class="favorite-recipes">
-      <div>
+      </div>
       <div class='to-cook-recipes'>
       </div>
       <div class="modal" id="modal">
