--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <li><a href="" class="tab-favorite-recipes">Favorite Recipes</a></li>
           <li><a href="" class="tab-to-cook-recipes">Recipes to Cook</a></li>
           <li><a href="">My Pantry</a></li>
-          <li><a href="">Shopping List</a></li>
+          <input class="search-input" placeholder="Search by Recipe Name or ID"></input>
         </ul>
       </nav>
     </header>
