Move My Pantry display to aside

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
           <li><a href="" class="tab-all-recipes current">All Recipes</a></li>
           <li><a href="" class="tab-favorite-recipes">Favorite Recipes</a></li>
           <li><a href="" class="tab-to-cook-recipes">Recipes to Cook</a></li>
-          <li><a href="">My Pantry</a></li>
+          <li><a href="" class="tab-pantry">My Pantry</a></li>
           <input class="search-input" placeholder="Search by Recipe Name or ID"></input>
         </ul>
       </nav>
@@ -39,12 +39,13 @@
         </div>
       </section>
       <aside>
-        <section class="shopping-list">
-          <h2>Shopping List</h2>
+          <h2>My Pantry</h2>
+          <div class="user-pantry">
           <a href="">Item, qty, cost</a>
           <a href="">Item, qty, cost</a>
           <a href="">Item, qty, cost</a>
           <a href="">Item, qty, cost</a>
+          </div>
         </section>
         <section class="something-here">
           <h2>Something Here</h2>
