--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
           <li><a href="" class="tab-all-recipes current">All Recipes</a></li>
           <li><a href="" class="tab-favorite-recipes">Favorite Recipes</a></li>
           <li><a href="" class="tab-to-cook-recipes">Recipes to Cook</a></li>
-          <li><a href="">                           </a></li>
+          <li><a href=""class="tab-pantry">Check out My Pantry:</a></li>
           <input class="search-input" placeholder="Search by Recipe Name or ID"></input>
         </ul>
       </nav>
