Fix project lint

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <li><a href="" class="tab-favorite-recipes">Favorite Recipes</a></li>
           <li><a href="" class="tab-to-cook-recipes">Recipes to Cook</a></li>
           <li><a href=""class="tab-pantry">Check out My Pantry:</a></li>
-          <input class="search-input" placeholder="Search by Recipe Name or ID"></input>
+          <input id="search" class="search-input" placeholder="Search by Recipe Name or ID"></input>
         </ul>
       </nav>
     </header>
@@ -45,12 +45,8 @@
           <a href="">Item, qty, cost</a>
         </div>
         </section>
-        <section class="something-here">
-          <h2>Shopping List</h2>
-          <p>Smaller Thing<br />
-            and here<br />
-            and here<br />
-            and so on...</p>
+        <section class="cook-question">
+          <h2>Can I cook this recipe?</h2>
         </section>
       </aside>
       <footer>
